pkg/lang/testdata/ub/comprehensions/valid/source-same-name.ub
locals: {
  xs: [1, 2]
  ys: [ for x in [ for x in local.xs : x ] : x ]
}
