pkg/lang/testdata/ub/comprehensions/invalid/nested-value-rebind.ub
locals: {
  xs: [1, 2]
  ys: [ for x in local.xs : [ for x in local.xs : x ] ]
}
